# Assignments-pi

./: readme.md
Assignment -1/: Dockerfile  main.py  pyproject.toml  readme.md
Assignment -2/: Dockerfile  pyproject.toml  readme.md
Assignment -2/app/: main.py
